--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,15 @@
                   <artifactId>cucumber-java</artifactId>
                   <version>7.13.0</version>
               </dependency>
-              <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
+
+              <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
               <dependency>
-                  <groupId>info.cukes</groupId>
+                  <groupId>io.cucumber</groupId>
                   <artifactId>cucumber-junit</artifactId>
-                  <version>1.2.5</version>
+                  <version>7.12.1</version>
                   <scope>test</scope>
               </dependency>
+
 
           </dependencies>
 
